--- a/courses/001 命名规则相关.md
+++ b/courses/001 命名规则相关.md
@@ -11,19 +11,26 @@ enum Status { Active, Inactive }
 
 
 函数名、变量名(首字母小写)：
+```
 function transfer(address to, uint256 value) { }
 uint256 public totalSupply;
+```
 
 常量名(全大写)：
+```
 uint256 constant MAX_SUPPLY = 1000000;
-
+```
 
 
 关于"合约中变量命名"
---参见OpenZepplin，成员变量，前缀统一加上下划线_(如，uint256 private _totalSupply = 0;)
-
+--参见OpenZepplin，成员变量，前缀统一加上下划线_
+```
+如，uint256 private _totalSupply = 0;
+```
 
 关于"合约文件的名称"与"合约的名称"：
 --Solidity 编译器允许在不同的文件中有相同名称的合约，但在设计合约时保持清晰和一致的命名规范总是一个好的实践，以避免混淆和潜在的问题。
---如，ContractA.sol - contract Hello
---如，ContractB.sol - contract Hello
+```
+如，ContractA.sol - contract Hello
+如，ContractB.sol - contract Hello
+```
