--- a/courses/000 概念.md
+++ b/courses/000 概念.md
@@ -1,5 +1,5 @@
 **交易**
-在区块链世界里，我们将所有的交互行为（例如，资产转移、智能合约执行、投票等）统称为一个交易（Transaction，简写为Tx）。这些交易表示在区块链上记录的状态变更或操作，并且通过区块链的机制确保其不可篡改和透明。
+^在区块链世界里，我们将所有的交互行为（例如，资产转移、智能合约执行、投票等）统称为一个交易（Transaction，简写为Tx）。这些交易表示在区块链上记录的状态变更或操作，并且通过区块链的机制确保其不可篡改和透明。
 
 **区块**
 在区块链中，区块（Block）是一个包含多个交易的容器。区块通常在一定的时间间隔内（如每10分钟）被创建，打包并记录这些交易。区块不仅包含交易，还包括其他信息，如区块头部、前一个区块的哈希值、时间戳等。
