--- a/courses/000 概念.md
+++ b/courses/000 概念.md
@@ -1,33 +1,39 @@
 **交易**
-· 在区块链世界里，我们将所有的交互行为（例如，资产转移、智能合约执行、投票等）统称为一个交易（Transaction，简写为Tx）。这些交易表示在区块链上记录的状态变更或操作，并且通过区块链的机制确保其不可篡改和透明。
+- 在区块链世界里，我们将所有的交互行为（例如，资产转移、智能合约执行、投票等）统称为一个交易（Transaction，简写为Tx）。
+- 这些交易表示在区块链上记录的状态变更或操作，并且通过区块链的机制确保其不可篡改和透明。
 
 **区块**
-在区块链中，区块（Block）是一个包含多个交易的容器。区块通常在一定的时间间隔内（如每10分钟）被创建，打包并记录这些交易。区块不仅包含交易，还包括其他信息，如区块头部、前一个区块的哈希值、时间戳等。
+- 在区块链中，区块（Block）是一个包含多个交易的容器。
+- 区块通常在一定的时间间隔内（如每10分钟）被创建，打包并记录这些交易。
+- 区块不仅包含交易，还包括其他信息，如区块头部、前一个区块的哈希值、时间戳等。
 
 **区块链**
-在区块链中，多个区块（Block）按照特定的规则链接在一起，形成一个连续的链，这个链被称为区块链（Blockchain）。每个区块包含若干笔交易，并通过前一个区块的哈希值与后续区块连接，确保了数据的完整性和不可篡改性。
+- 在区块链中，多个区块（Block）按照特定的规则链接在一起，形成一个连续的链，这个链被称为区块链（Blockchain）。
+- 每个区块包含若干笔交易，并通过前一个区块的哈希值与后续区块连接，确保了数据的完整性和不可篡改性。
 
 **以太坊网络**
-以太坊网络可以被看作一个全球性的计算机，由成千上万台独立计算机（节点）组成，这些节点运行以太坊的客户端软件。为了参与网络并维护区块链状态，节点需要运行全节点客户端。
-参与网络的节点（包括矿工和验证者）负责执行和验证链上的程序（智能合约），并将交易打包进新区块进行全网同步。
+- 以太坊网络可以被看作一个全球性的计算机，由成千上万台独立计算机（节点）组成，这些节点运行以太坊的客户端软件。
+- 为了参与网络并维护区块链状态，节点需要运行全节点客户端。
+- 参与网络的节点（包括矿工和验证者）负责执行和验证链上的程序（智能合约），并将交易打包进新区块进行全网同步。
 
 **比特币-以太坊-智能合约**
-比特币的主要功能是作为一种去中心化的数字货币，专注于金融转账和资产转移，其设计并不支持复杂的编程功能。
-以太坊则是一个更先进的平台，其设计目的是为了支持去中心化应用（dApps）的开发。以太坊引入了一种新的编程语言——Solidity，专门用于编写智能合约（Smart Contracts）。
-智能合约是在以太坊区块链上自动执行的程序，可以处理各种逻辑和交易。
+- 比特币的主要功能是作为一种去中心化的数字货币，专注于金融转账和资产转移，其设计并不支持复杂的编程功能。
+- 以太坊则是一个更先进的平台，其设计目的是为了支持去中心化应用（dApps）的开发。
+- 以太坊引入了一种新的编程语言——Solidity，专门用于编写智能合约（Smart Contracts）。
+- 智能合约是在以太坊区块链上自动执行的程序，可以处理各种逻辑和交易。
 
 **为什么叫智能合约**
-一旦部署就不会消失，因为区块链的账本数据永远存在（合约）
-一旦被触发就会按照既定逻辑执行，无人能够作恶（智能）
+- 一旦部署就不会消失，因为区块链的账本数据永远存在（合约）
+- 一旦被触发就会按照既定逻辑执行，无人能够作恶（智能）
 
 **以太坊特性**
-1. 以太坊是一个区块链的网络，由很多节点组成
-2. 一个node节点其实就是一个运行以太坊客户端的计算机
-3. 每一个以太坊节点都可以同步全部的账本/区块链信息（blockchain）
-4. 以太坊可以转账，可以做数据存储（合约）
-5. 以太坊可以执行程序，程序叫做智能合约，所有节点都运行这个程序
-6. 以太坊网络有很多个，主网只有一个，还有很多测试网络，我们也可以自己搭建私链
-7. 以太坊是公有链，每个人都可以自由的加入退出以太坊网络
+- 以太坊是一个区块链的网络，由很多节点组成
+- 一个node节点其实就是一个运行以太坊客户端的计算机
+- 每一个以太坊节点都可以同步全部的账本/区块链信息（blockchain）
+- 以太坊可以转账，可以做数据存储（合约）
+- 以太坊可以执行程序，程序叫做智能合约，所有节点都运行这个程序
+- 以太坊网络有很多个，主网只有一个，还有很多测试网络，我们也可以自己搭建私链
+- 以太坊是公有链，每个人都可以自由的加入退出以太坊网络
 
 Solid       | adj   |   坚硬的，可靠的
 Solidity    | n     |   硬度，可靠性
