--- a/courses/000 概念.md
+++ b/courses/000 概念.md
@@ -36,7 +36,8 @@
 - 以太坊是公有链，每个人都可以自由的加入退出以太坊网络
 
 | Solid     | adj   | 坚硬的，可靠的 |
-| ------    | ------| --------------|
+| ------    | ------| ------------- |
+| Solidity  | n     | 硬度，可靠性   |
 
 Solid       | adj   |   坚硬的，可靠的
 Solidity    | n     |   硬度，可靠性
