--- a/courses/000 概念.md
+++ b/courses/000 概念.md
@@ -37,19 +37,15 @@
 
 | Solid     | adj   | 坚硬的，可靠的 |
 | ------    | ------| ------------- |
-| Solidity  | n     | 硬度，可靠性   |
-| ------    | ------| ------------- |
+| Solidity  | n     | 硬度，可靠性   
 
-Solid       | adj   |   坚硬的，可靠的
-Solidity    | n     |   硬度，可靠性
-
-Solidity的语法概念最早是由加文·伍德在2014年提出，后期则以Christian Reitwiessner所领导的以太坊团队Solidity接手开发。
-该语言是针对以太坊虚拟机（EVM）所设计的四种语言之一（其他的还有Serpent，LLL，Viper（实验中）和Mutan（已弃用））。
-
-Solidity是一种静态类型的编程语言，用于开发在EVM上执行的智能合约。 
-Solidity被编译为可在EVM上执行的字节码。
-借由Solidity，开发人员能够编写出可自我执行其欲实现之商业逻辑的应用程序，该程序可被视为一份具权威性且永不可悔改的交易合约。
-对已具备程序编辑能力的人而言，编写Solidity的难易度就如同编写一般的编程语言。
+**Solidity**
+- Solidity的语法概念最早是由加文·伍德在2014年提出，后期则以Christian Reitwiessner所领导的以太坊团队Solidity接手开发。
+- 该语言是针对以太坊虚拟机（EVM）所设计的四种语言之一（其他的还有Serpent，LLL，Viper（实验中）和Mutan（已弃用））。
+- Solidity是一种静态类型的编程语言，用于开发在EVM上执行的智能合约。 
+- Solidity被编译为可在EVM上执行的字节码。
+- 借由Solidity，开发人员能够编写出可自我执行其欲实现之商业逻辑的应用程序，该程序可被视为一份具权威性且永不可悔改的交易合约。
+- 对已具备程序编辑能力的人而言，编写Solidity的难易度就如同编写一般的编程语言。
 
 进制翻译
 HEX，英文全称 Hexadecimal，表示十六进制。
