--- a/courses/000 概念.md
+++ b/courses/000 概念.md
@@ -51,7 +51,7 @@
 
 | Solid     | adj   | 坚硬的，可靠的 |
 | ------    | ------| ------------- |
-| Solidity  | n     | 硬度，可靠性   |
+| Solidity  | n     | 硬度，可靠性   
 **Solidity**
 - Solidity的语法概念最早是由加文·伍德在2014年提出，后期则以Christian Reitwiessner所领导的以太坊团队Solidity接手开发。
 - 该语言是针对以太坊虚拟机（EVM）所设计的四种语言之一（其他的还有Serpent，LLL，Viper（实验中）和Mutan（已弃用））。
