--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -36,42 +36,46 @@
 
 　
 
-------------------------------------------------------------------------------------------------------------------------------------------
+
 
 　
 
-整数类型细说：
---不论uint或者int【8位 ~ 256位】【使用字节对齐的方式位数值是8/16/24/32/40/48/56/64/72/80/88/96...........256】【粗暴理解为8的倍数值】
---占位字节数【1 ~ 32】
+## 整数类型细说：
+- 不论uint或者int【8位 ~ 256位】【使用字节对齐的方式位数值是8/16/24/32/40/48/56/64/72/80/88/96...........256】【粗暴理解为8的倍数值】
+- 占位字节数【1 ~ 32】
 
-uint
---取值范例【0 ~ 1111 1111】
---取值【0 ~ 2^Bit -1】
---如【0 ~ 2^8 -1】即【0 ~ 255】
+　
 
-int(建议复习一下计算机的补码原理)
---取值范例【1111 1111 , 0111 1111】
---取值【-1*(2^(Bit-1)) ~ 2^(Bit-1) -1】
---如【-1*(2^7) ~ 2^7 -1】即【-128 ~ 127】
+## uint
+- 取值范例【0 ~ 1111 1111】
+- 取值【0 ~ 2^Bit -1】
+- 如【0 ~ 2^8 -1】即【0 ~ 255】
+
+　
+
+## int(建议复习一下计算机的补码原理)
+- 取值范例【1111 1111 , 0111 1111】
+- 取值【-1*(2^(Bit-1)) ~ 2^(Bit-1) -1】
+- 如【-1*(2^7) ~ 2^7 -1】即【-128 ~ 127】
 
 地址类型细说：
---20字节值
---十六进制字符的每一位都可以表示 16 种不同的值，而 4 位二进制数据也可以表示 16 种不同的值（0 到 15）；每1位个十六进制字符代表4位个二进制
---1个字节 = 8位个二进制数
---20个字节 = 8*20位个二进制数 = 8*20/4位个十六进制数 = 40位个十六进制数
---如，0x1234567890123456789012345678901234567890，十六进制表达方式，即40个值
---获取合约的地址，如，合约实例为 TargetContract target，那么，它的地址为 address(target);
+- 20字节值
+- 十六进制字符的每一位都可以表示 16 种不同的值，而 4 位二进制数据也可以表示 16 种不同的值（0 到 15）；每1位个十六进制字符代表4位个二进制
+- 1个字节 = 8位个二进制数
+- 20个字节 = 8*20位个二进制数 = 8*20/4位个十六进制数 = 40位个十六进制数
+- 如，0x1234567890123456789012345678901234567890，十六进制表达方式，即40个值
+- 获取合约的地址，如，合约实例为 TargetContract target，那么，它的地址为 address(target);
 
 定长字节型细说：
 bytes32 public _byte32 = "MiniSolidity";
---"MiniSolidity"的长度是11个字符。每个字符在UTF-8编码中占用1个字节，所以总长度是11字节。
---"MiniSolidity" + 21个零字节
---4d696e69536f6c69646974790000000000000000000000000000000000000000
+- "MiniSolidity"的长度是11个字符。每个字符在UTF-8编码中占用1个字节，所以总长度是11字节。
+- "MiniSolidity" + 21个零字节
+- 4d696e69536f6c69646974790000000000000000000000000000000000000000
 
 枚举类型细说：
---底层类型是 uint（无符号整数）所以，即使显性的赋值，也不得小于0
---如果枚举的成员数量在256个以内，则底层类型为uint8
---如果枚举的成员数量超过256个，则底层类型为uint256(即，uint)
+- 底层类型是 uint（无符号整数）所以，即使显性的赋值，也不得小于0
+- 如果枚举的成员数量在256个以内，则底层类型为uint8
+- 如果枚举的成员数量超过256个，则底层类型为uint256(即，uint)
     enum Status {
         Invalid = -1,   // 编译错误: 值必须是无符号整数
         InIdle          // 默认值为0
@@ -83,25 +87,25 @@ bytes32 public _byte32 = "MiniSolidity";
 ------------------------------------------------------------------------------------------------------------------------------------------
 
 动态大小的字节数组细说：
---bytes是一个更通用的动态字节数组，可以存储任意字节数据。
---bytes dynamicBytes = "Hello, Solidity!";
+- bytes是一个更通用的动态字节数组，可以存储任意字节数据。
+- bytes dynamicBytes = "Hello, Solidity!";
 
 字符串细说：
---string是bytes的一个子类型
---string 是一种动态长度的 Unicode(UTF-8编码) 字符串，用于存储文本数据。
---string 是 bytes 的一个特殊形式，专门用于处理文本。
---string message = "Hello, Solidity!";
+- string是bytes的一个子类型
+- string 是一种动态长度的 Unicode(UTF-8编码) 字符串，用于存储文本数据。
+- string 是 bytes 的一个特殊形式，专门用于处理文本。
+- string message = "Hello, Solidity!";
 
 数组类型细说：
---uint[3] fixedSizeArray = [1, 2, 3];
---uint[] dynamicArray; dynamicArray.push(1); dynamicArray.push(2); dynamicArray.push(3);
+- uint[3] fixedSizeArray = [1, 2, 3];
+- uint[] dynamicArray; dynamicArray.push(1); dynamicArray.push(2); dynamicArray.push(3);
 
 映射（mapping）类型细说：
---必须存储在storage中
---不储存任何键（Key）的资讯，也没有length的资讯，故，不支持迭代或获取键的集合，只能通过键快速访问值
---主键只能是值类型（如 uint、address 等），而值可以是任意类型，包括引用类型。
---访问mapping的时候，如果"目标主键"不存在，则返回"值"的默认value。不会报错。
---使用delete操作符，会把映射值重置为默认值。如，delete balances[msg.sender];
+- 必须存储在storage中
+- 不储存任何键（Key）的资讯，也没有length的资讯，故，不支持迭代或获取键的集合，只能通过键快速访问值
+- 主键只能是值类型（如 uint、address 等），而值可以是任意类型，包括引用类型。
+- 访问mapping的时候，如果"目标主键"不存在，则返回"值"的默认value。不会报错。
+- 使用delete操作符，会把映射值重置为默认值。如，delete balances[msg.sender];
 
 ------------------------------------------------------------------------------------------------------------------------------------------
 
@@ -127,18 +131,18 @@ calldata：同memory，存储在的合约内存中(一般修饰external函数的
 堆栈：函数的调用栈(声明周期，随着函数调用开始，函数调用完成则结束)
 
 存储位置细说 - 变量作为代码声明的时候(即，合约的状态变量)：
---不论值类型还是引用类型：修饰符必须为空，存储在链上
---映射类型：修饰符必须为空，存储在链上
+- 不论值类型还是引用类型：修饰符必须为空，存储在链上
+- 映射类型：修饰符必须为空，存储在链上
 
 存储位置细说 - 变量作为函数参数的时候：
---引用类型：要么memory，要么calldata(当external)
---值类型：修饰符必须为空，存储在堆栈中
---映射类型：禁止
+- 引用类型：要么memory，要么calldata(当external)
+- 值类型：修饰符必须为空，存储在堆栈中
+- 映射类型：禁止
 
 存储位置细说 - 变量作为函数体内的局部变量的时候：
---引用类型：memory
---值类型：修饰符必须为空，存储在堆栈中
---映射类型：禁止
+- 引用类型：memory
+- 值类型：修饰符必须为空，存储在堆栈中
+- 映射类型：禁止
 
 函数形式示例：
     function foo() public {
@@ -179,20 +183,10 @@ address[] array6;
 bytes array7;                       //bytes比较特殊，是数组，但是不用加[]
 
 数组的成员(变量，以及函数)
---length            长度
---push(x)           动态数组尾部添加元素
---pop()             动态数组末尾移除最后一个元素，并返回该元素
---delete ary[index] 把指定元素重置为默认值
---delete ary        动态长度数组，把指定元素重置为默认值，数组长度变为0
---delete ary        固定长度数组，把指定元素重置为默认值，数组长度不变化
+- length            长度
+- push(x)           动态数组尾部添加元素
+- pop()             动态数组末尾移除最后一个元素，并返回该元素
+- delete ary[index] 把指定元素重置为默认值
+- delete ary        动态长度数组，把指定元素重置为默认值，数组长度变为0
+- delete ary        固定长度数组，把指定元素重置为默认值，数组长度不变化
 
-------------------------------------------------------------------------------------------------------------------------------------------
-
-名称的冲突相关：
---"合约的成员变量名称"，与"函数参数的变量名称"，可以重名(但，会发出警告)
---"合约的成员变量名称"，与"函数的名称"，禁止重名
---"合约的成员变量名称"，与"事件的名称"，禁止重名
---"函数参数的变量名称"，与"函数的名称"，禁止重名
---"函数参数的变量名称"，与"事件的名称"，可以重名(不推荐)
---"函数中的临时变量名称"，与"事件的名称"，可以重名(不推荐)
-结论：各种名称尽量保持独一性
