--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -1,4 +1,4 @@
-## 值类型（Value Types）完全统计：
+### 值类型（Value Types）完全统计：
 - 布尔型（bool）
 - 整数型（int 和 uint）
 - 地址型（address）（20 字节）
@@ -58,7 +58,7 @@
 - 取值【-1*(2^(Bit-1)) ~ 2^(Bit-1) -1】
 - 如【-1*(2^7) ~ 2^7 -1】即【-128 ~ 127】
 
-地址类型细说：
+## 地址类型细说：
 - 20字节值
 - 十六进制字符的每一位都可以表示 16 种不同的值，而 4 位二进制数据也可以表示 16 种不同的值（0 到 15）；每1位个十六进制字符代表4位个二进制
 - 1个字节 = 8位个二进制数
@@ -66,16 +66,19 @@
 - 如，0x1234567890123456789012345678901234567890，十六进制表达方式，即40个值
 - 获取合约的地址，如，合约实例为 TargetContract target，那么，它的地址为 address(target);
 
-定长字节型细说：
+## 定长字节型细说：
+```
 bytes32 public _byte32 = "MiniSolidity";
+```
 - "MiniSolidity"的长度是11个字符。每个字符在UTF-8编码中占用1个字节，所以总长度是11字节。
 - "MiniSolidity" + 21个零字节
 - 4d696e69536f6c69646974790000000000000000000000000000000000000000
 
-枚举类型细说：
+## 枚举类型细说：
 - 底层类型是 uint（无符号整数）所以，即使显性的赋值，也不得小于0
 - 如果枚举的成员数量在256个以内，则底层类型为uint8
 - 如果枚举的成员数量超过256个，则底层类型为uint256(即，uint)
+```
     enum Status {
         Invalid = -1,   // 编译错误: 值必须是无符号整数
         InIdle          // 默认值为0
@@ -83,6 +86,7 @@ bytes32 public _byte32 = "MiniSolidity";
         InPause = 5     // 5
         InEnd           // 6
     }
+```    
 
 ------------------------------------------------------------------------------------------------------------------------------------------
 
