--- a/courses/003 控制流.md
+++ b/courses/003 控制流.md
@@ -1,20 +1,34 @@
-控制流(不展开了)：
+#### 控制流：
+```
     if(_number == 0){
         //..
     }else{
         //..
     }
+```
 
+　
+
+```
     for(uint i = 0; i < 10; i++){
         //..
     }
+```    
 
+　
+
+```
     while(i < 10){
         //..
         i++;
     }
-    
+```  
+
+　
+
+```  
     do{
         //..
         i++;
     } while(i < 10);    
+```
