--- a/courses/005 修饰器.md
+++ b/courses/005 修饰器.md
@@ -1,10 +1,13 @@
-修饰器（modifier）：
-
+#### 修饰器（modifier）：
+```
 modifier onlyOwner {
    require(msg.sender == owner); // 检查调用者是否为owner地址
    _; // 如果是的话，继续运行函数主体；
 }
+```
 
+```
 function changeOwner(address _newOwner) external onlyOwner{
    owner = _newOwner; // 只有owner地址运行这个函数，并改变owner
 }
+```
