--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -1,34 +1,35 @@
 
-这里补充一些合约中经常使用的结构说明：
 
 
 
-address ：用于处理以太坊地址。
-    adr.balance
-    代码类型：属性
-    返回类型：uint
-    说明：返回地址持有的以Wei为单位的Ether余额。
+#### address ：用于处理以太坊地址。
+- adr.balance
+- 代码类型：属性
+- 返回类型：uint
+- 说明：返回地址持有的以Wei为单位的Ether余额。
 
-    adr.code
-    代码类型：属性
-    返回类型：bytes
-    说明：返回地址的字节码。如果该地址是一个合约地址，返回的字节码就是该合约的代码；如果该地址是一个普通的外部账户，则返回的字节码为空，即 bytes("")。
+- adr.code
+- 代码类型：属性
+- 返回类型：bytes
+- 说明：返回地址的字节码。如果该地址是一个合约地址，返回的字节码就是该合约的代码；如果该地址是一个普通的外部账户，则返回的字节码为空，即 bytes("")。
 
-    adr.transfer
-    代码类型：函数
-    说明: 将指定数量的Ether发送到另一个地址。会自动检查发送者的余额。(后续章节有细说)
+- adr.transfer
+- 代码类型：函数
+- 说明: 将指定数量的Ether发送到另一个地址。会自动检查发送者的余额。(后续章节有细说)
 
-    adr.send
-    代码类型：函数
-    说明: 将指定数量的Ether发送到另一个地址，但返回布尔值以指示是否成功，不会抛出错误。(后续章节有细说)    
+- adr.send
+- 代码类型：函数
+- 说明: 将指定数量的Ether发送到另一个地址，但返回布尔值以指示是否成功，不会抛出错误。(后续章节有细说)    
 
-    adr.call
-    代码类型：函数
-    说明: 低级调用，允许发送Ether并调用另一个合约的函数。返回布尔值和数据。(后续章节有细说)
+- adr.call
+- 代码类型：函数
+- 说明: 低级调用，允许发送Ether并调用另一个合约的函数。返回布尔值和数据。(后续章节有细说)
 
-    adr.delegatecall
-    代码类型：函数
-    说明: 低级调用，执行目标合约的代码，保持调用者的上下文。返回布尔值和数据。(后续章节有细说)    
+- adr.delegatecall
+- 代码类型：函数
+- 说明: 低级调用，执行目标合约的代码，保持调用者的上下文。返回布尔值和数据。(后续章节有细说)    
+
+------------------------------------------------------------------------------------------
 
 msg：提供了与合约调用相关的信息，帮助开发者了解交易的上下文。msg 是message的缩写
     msg.sender
