--- a/courses/007 合约中使用的结构.md
+++ b/courses/007 合约中使用的结构.md
@@ -3,12 +3,12 @@
 
 
 #### address ：用于处理以太坊地址。
-- adr.balance
+> adr.balance
 - 代码类型：属性
 - 返回类型：uint
 - 说明：返回地址持有的以Wei为单位的Ether余额。
 
-- adr.code
+> adr.code
 - 代码类型：属性
 - 返回类型：bytes
 - 说明：返回地址的字节码。如果该地址是一个合约地址，返回的字节码就是该合约的代码；如果该地址是一个普通的外部账户，则返回的字节码为空，即 bytes("")。
