--- a/courses/007 库合约.md
+++ b/courses/007 库合约.md
@@ -13,7 +13,7 @@ import * as MyLibrary from "./MyLibrary.sol";
 import '@openzeppelin/contracts/access/Ownable.sol';
 ```
 
-##### 1.利用using for指令
+##### 使用方式1 ：利用using for指令
 - 指令using A for B;可用于附加库合约（从库 A）到任何类型（B）。
 - 添加完指令后，库A中的函数会自动添加为B类型变量的成员，可以直接调用。
 - 注意：在调用的时候，这个变量会被当作第一个参数传递给函数：
@@ -25,7 +25,7 @@ function getString1(uint256 _number) public pure returns(string memory){
 }
 ```
 
-##### 2.通过库合约名称调用函数(更直观接近于传统编程范式，不绕口)
+##### 使用方式2 ：通过库合约名称调用函数(更直观接近于传统编程范式，不绕口)
 ```
 function getString2(uint256 _number) public pure returns(string memory){
     return Strings.toHexString(_number);
