--- a/courses/007 抽象合约.md
+++ b/courses/007 抽象合约.md
@@ -1,9 +1,10 @@
 
-抽象合约的特点：
---如果一个智能合约里至少有一个未实现的函数(即，缺少函数主体)，那么该合约必须被标记为abstract，不然编译不通过。
---其他部分与常规合约一致
+#### 抽象合约的特点：
+- 如果一个智能合约里至少有一个未实现的函数(即，缺少函数主体)，那么该合约必须被标记为abstract，不然编译不通过。
+- 其他部分与常规合约一致
 
-简要示例：
+##### 简要示例：
+```
 abstract contract AbstractContract {
     // 抽象函数
     function doSomething(uint256 value) public virtual returns (uint256);
@@ -13,3 +14,4 @@ abstract contract AbstractContract {
         return "Hello, World!";
     }
 }
+```
