--- a/courses/002 变量与函数.md
+++ b/courses/002 变量与函数.md
@@ -65,18 +65,16 @@
 - 十六进制字符的每一位都可以表示 16 种不同的值，而 4 位二进制数据也可以表示 16 种不同的值（0 到 15）；每1位个十六进制字符代表4位个二进制
 - 1个字节 = 8位个二进制数
 - 20个字节 = 8*20位个二进制数 = 8*20/4位个十六进制数 = 40位个十六进制数
-- 如，0x1234567890123456789012345678901234567890，十六进制表达方式，即40个值
-- 获取合约的地址，如，合约实例为 TargetContract target，那么，它的地址为 address(target);
+- 如，```0x1234567890123456789012345678901234567890```，十六进制表达方式，即40个值
+- 获取合约的地址，如，合约实例为 ```TargetContract target```，那么，它的地址为 ```address(target)```
 
 　
 
 #### 定长字节型细说：
-```
-bytes32 public _byte32 = "MiniSolidity";
-```
+- ```bytes32 public _byte32 = "MiniSolidity";```
 - "MiniSolidity"的长度是11个字符。每个字符在UTF-8编码中占用1个字节，所以总长度是11字节。
-- "MiniSolidity" + 21个零字节
-- 4d696e69536f6c69646974790000000000000000000000000000000000000000
+- ```"MiniSolidity" + 21个零字节```
+- ```4d696e69536f6c69646974790000000000000000000000000000000000000000```
 
 　
 
@@ -102,7 +100,7 @@ bytes32 public _byte32 = "MiniSolidity";
 
 #### 动态大小的字节数组细说：
 - bytes是一个更通用的动态字节数组，可以存储任意字节数据。
-- bytes dynamicBytes = "Hello, Solidity!";
+- ```bytes dynamicBytes = "Hello, Solidity!";```
 
 　
 
@@ -110,7 +108,7 @@ bytes32 public _byte32 = "MiniSolidity";
 - string是bytes的一个子类型
 - string 是一种动态长度的 Unicode(UTF-8编码) 字符串，用于存储文本数据。
 - string 是 bytes 的一个特殊形式，专门用于处理文本。
-- string message = "Hello, Solidity!";
+- ```string message = "Hello, Solidity!";```
 
 　
 
@@ -130,7 +128,7 @@ dynamicArray.push(3);
 - 不储存任何键（Key）的资讯，也没有length的资讯，故，不支持迭代或获取键的集合，只能通过键快速访问值
 - 主键只能是值类型（如 uint、address 等），而值可以是任意类型，包括引用类型。
 - 访问mapping的时候，如果"目标主键"不存在，则返回"值"的默认value。不会报错。
-- 使用delete操作符，会把映射值重置为默认值。如，delete balances[msg.sender];
+- 使用delete操作符，会把映射值重置为默认值。如，```delete balances[msg.sender];```
 
 　
 
@@ -148,7 +146,7 @@ function <function name>(<parameter types>) {internal|external|public|private} [
 #### 函数可见性：
 - public：内部和外部均可见。
 - private：只能从本合约内部访问，继承的合约也不能使用。
-- external：只能从合约外部访问（但内部可以通过 this.f() 来调用，f是函数名，但这种调用方式消耗gas较多，不推荐）。
+- external：只能从合约外部访问（但内部可以通过 ```this.f()``` 来调用，f是函数名，但这种调用方式消耗gas较多，不推荐）。
 - internal: 只能从合约内部访问，继承的合约可以用。
 
 　
