--- a/courses/004 异常.md
+++ b/courses/004 异常.md
@@ -5,8 +5,8 @@
 - 失败时消耗部分 gas：如果条件为假，交易将回滚并恢复到调用之前的状态，退还剩余的 gas，并可以返回自定义错误消息。
 - 适用：业务常规检查判断(通常用于验证输入、权限检查等)
 - 控制台的异常定位，比较明显
-- require(amount > 0, "Amount must be greater than zero");
-- require(amount > 0);
+- ```require(amount > 0, "Amount must be greater than zero");```
+- ```require(amount > 0);```
 
 　
 
@@ -15,7 +15,7 @@
 - 失败时消耗所有 gas：如果条件为假，交易将回滚并消耗所有剩余的 gas。
 - 适用：逻辑检查判断(通常用于检测代码中的严重错误和不变量违反、不应发生的错误)
 - 控制台的异常定位，不明显
-- assert(result >= a);
+- ```assert(result >= a);```
 
 　
 
@@ -25,7 +25,7 @@
 - 适用：复杂逻辑回滚、自定义错误处理
 - 总 gas 消耗 = 基础消耗（约 21,000 gas） + 字符长度 * 每字符消耗（约 68 gas）。
 - 控制台的异常定位，比较明显
-- revert("Failed to send Ether");
+- ```revert("Failed to send Ether");```
 
 　
 
@@ -33,9 +33,9 @@
 - solidity 0.8.4版本新增，高效省gas，抛出异常
 - 更加节省 gas：在触发时不会消耗过多的 gas，并且可以带有参数来提供更多的上下文信息，必须搭配revert一起，所以具备回滚特性
 - 控制台的异常定位，比较明显
-- error TransferNotOwner();                 // 自定义error
-- error TransferNotOwner(address sender);   // 自定义的带参数的error
-- revert TransferNotOwner();                // revert出
+- ```error TransferNotOwner();                 // 自定义error```
+- ```error TransferNotOwner(address sender);   // 自定义的带参数的error```
+- ```revert TransferNotOwner();                // revert出```
 
 　
 
@@ -46,7 +46,7 @@
 #### try-catch说明：
 - Solidity 版本需要在 0.6.0 及以上才能使用 try-catch
 - try-catch 能捕获外部合约的调用错误，而无法捕获当前合约内部的错误。
-- try-catch 能捕(目标合约地址.call/delegatecall)调用错误。
+- try-catch 能捕(```目标合约地址.call/delegatecall```)调用错误。
 
 ##### 几种写法(可以没有returns语句)：
 ```
