--- a/courses/001 命名规则相关.md
+++ b/courses/001 命名规则相关.md
@@ -1,5 +1,5 @@
 
-## 合约名、库名、事件名、接口名、结构体名、枚举名(首字母大写)：
+#### 合约名、库名、事件名、接口名、结构体名、枚举名(首字母大写)：
 ```
 contract MyToken { }
 library MathLib { }
@@ -11,7 +11,7 @@ enum Status { Active, Inactive }
 
 　
 
-## 函数名、变量名(首字母小写)：
+#### 函数名、变量名(首字母小写)：
 ```
 function transfer(address to, uint256 value) { }
 uint256 public totalSupply;
@@ -19,14 +19,14 @@ uint256 public totalSupply;
 
 　
 
-## 常量名(全大写)：
+#### 常量名(全大写)：
 ```
 uint256 constant MAX_SUPPLY = 1000000;
 ```
 
 　
 
-## 关于"合约中变量命名"
+#### 关于"合约中变量命名"
 - 参见OpenZepplin，成员变量，前缀统一加上下划线_
 ```
 uint256 private _totalSupply = 0;
@@ -34,18 +34,18 @@ uint256 private _totalSupply = 0;
 
 　
 
-## 关于"合约文件的名称"与"合约的名称"：
+#### 关于"合约文件的名称"与"合约的名称"：
 - Solidity 编译器允许在不同的文件中有相同名称的合约，但在设计合约时保持清晰和一致的命名规范总是一个好的实践，以避免混淆和潜在的问题。
 ```
 ContractA.sol - contract Hello
 ContractB.sol - contract Hello
 ```
 
-## 名称的冲突相关：
+#### 名称的冲突相关：
 - "合约的成员变量名称"，与"函数参数的变量名称"，可以重名(但，会发出警告)
 - "合约的成员变量名称"，与"函数的名称"，禁止重名
 - "合约的成员变量名称"，与"事件的名称"，禁止重名
 - "函数参数的变量名称"，与"函数的名称"，禁止重名
 - "函数参数的变量名称"，与"事件的名称"，可以重名(不推荐)
 - "函数中的临时变量名称"，与"事件的名称"，可以重名(不推荐)
-## 结论：各种名称尽量保持独一性
+#### 结论：各种名称尽量保持独一性
