--- a/courses/015 删除合约.md
+++ b/courses/015 删除合约.md
@@ -1,6 +1,6 @@
 
 #### selfdestruct()函数说明：
-- 用来删除智能合约，并将该合约剩余ETH转到指定地址(目标地址，不需要有receive()或fallback()也能接收ETH)。
+- 用来删除智能合约，并将该合约剩余ETH转到指定地址(目标地址，不需要有```receive()```或```fallback()```也能接收ETH)。
 - 它最早被命名为suicide（自杀），但是这个词太敏感。为了保护抑郁的程序员，改名为selfdestruct。
 
 #### 坎昆（Cancun）升级之前：
