--- a/courses/016 abi编码相关.md
+++ b/courses/016 abi编码相关.md
@@ -1,20 +1,20 @@
 
 
-ABI的概念
---在以太坊智能合约中，ABI(Application Binary Interface，应用二进制接口)是一种规范。
---它定义了智能合约的数据如何在网络上传输，以及如何在不同的语言和环境之间进行交互。
---ABI的核心功能之一就是数据编码和解码。
---详细范例，见(contract/TestEncode.sol)
+#### ABI的概念
+- 在以太坊智能合约中，ABI(Application Binary Interface，应用二进制接口)是一种规范。
+- 它定义了智能合约的数据如何在网络上传输，以及如何在不同的语言和环境之间进行交互。
+- ABI的核心功能之一就是数据编码和解码。
+- 详细范例，见(contract/TestEncode.sol)
 
 ////////////////////////////////////////////////////////////////////////////
 
-abi.encode
-描述：此函数将参数编码为一个字节数组，适合用于存储或传输数据。
-用法：bytes memory encodedData = abi.encode(param1, param2, ...);
-特点：
-    1.支持多种数据类型（基本类型、结构体、数组等）。
-    2.输出结果为一个固定长度的字节数组。
-    3.编码结果是可逆的，可以通过 abi.decode 函数进行解码。
+#### abi.encode
+    描述：此函数将参数编码为一个字节数组，适合用于存储或传输数据。
+    用法：bytes memory encodedData = abi.encode(param1, param2, ...);
+    特点：
+        1.支持多种数据类型（基本类型、结构体、数组等）。
+        2.输出结果为一个固定长度的字节数组。
+        3.编码结果是可逆的，可以通过 abi.decode 函数进行解码。
 
 abi.encodePacked
 描述：此函数将参数紧凑编码为一个字节数组，适合用于生成哈希值（例如，Merkle 树或签名）。
@@ -50,7 +50,7 @@ abi.decode
 
 ////////////////////////////////////////////////////////////////////////////    
 
-ABI的使用场景总结：
---配合call来实现对合约的底层调用。(abi.encodeWithSignature、abi.encodeWithSelector)
---ethers.js中常用ABI实现合约的导入和函数调用。(此处，ABI代表合约编译后，生成的编译信息，如 artifacts/contracts/MyContract.sol/MyContract.json)
---对不开源合约进行反编译后，某些函数无法查到函数签名，可通过ABI进行调用。(我没具体研究)
+#### ABI的使用场景总结：
+- 配合call来实现对合约的底层调用。(abi.encodeWithSignature、abi.encodeWithSelector)
+- ethers.js中常用ABI实现合约的导入和函数调用。(此处，ABI代表合约编译后，生成的编译信息，如 artifacts/contracts/MyContract.sol/MyContract.json)
+- 对不开源合约进行反编译后，某些函数无法查到函数签名，可通过ABI进行调用。(我没具体研究)
