--- a/courses/016 abi编码相关.md
+++ b/courses/016 abi编码相关.md
@@ -10,7 +10,7 @@
 
 #### abi.encode
     描述：此函数将参数编码为一个字节数组，适合用于存储或传输数据。
-    用法：bytes memory encodedData = abi.encode(param1, param2, ...);
+    用法：```bytes memory encodedData = abi.encode(param1, param2, ...);```
     特点：
         1.支持多种数据类型（基本类型、结构体、数组等）。
         2.输出结果为一个固定长度的字节数组。
