--- a/courses/017 哈希函数.md
+++ b/courses/017 哈希函数.md
@@ -9,11 +9,8 @@
 - 智能合约的状态：智能合约的状态也可以通过哈希值进行管理。合约的状态更改可以生成新的哈希值，便于追踪和验证。    
 - 密码学：在用户身份验证中，哈希可以用来安全地存储密码。用户输入的密码经过哈希后存储在链上，即使数据泄露，原始密码也难以被恢复。
 - 碰撞性：良好的哈希函数应具有抗碰撞性，即很难找到两个不同的输入产生相同的哈希值。这对于区块链的安全性至关重要。
-- 常用哈希函数：
-```
-    keccak256: 以太坊中主要的哈希函数，常用于生成唯一的标识符。
-    sha256: 另一种哈希函数，通常用于需要较高安全性的场景。    
-```
+- 常用哈希函数：keccak256(以太坊中主要的哈希函数，常用于生成唯一的标识符)，sha256(另一种哈希函数，通常用于需要较高安全性的场景)
+
 
 
 
