--- a/courses/018 函数选择器.md
+++ b/courses/018 函数选择器.md
@@ -1,7 +1,7 @@
 #### 函数选择器概念：
 - 当我们调用智能合约的普通函数时，本质上是向目标合约发送了一段calldata。
 - calldata，就是remix控制台打印中的input"。
-- 它的前4个字节，就是函数选择器(selector)，也可以叫做method id
+- 它的前4个字节，就是函数选择器```selector```，也可以叫做```method id```
 - 它懂得后32字节为"参数"。
 
 　
