--- a/courses/018 函数选择器.md
+++ b/courses/018 函数选择器.md
@@ -30,14 +30,14 @@ bytes4 data = bytes4(keccak256("functionName(uint256,bool)"))
 
 　
 
-#### 计算示例(固定长度类型参数)：
+#### 计算示例(携带固定长度类型参数)：
 ```
 bytes4 data = bytes4(keccak256("functionName(uint256[3])"))
 ```
 
 　
 
-#### 计算示例(可变长度类型参数)：
+#### 计算示例(携带可变长度类型参数)：
 ```
 bytes4 data = bytes4(keccak256("functionName(uint256[],string)"))
 ```
