--- a/courses/018 函数选择器.md
+++ b/courses/018 函数选择器.md
@@ -67,14 +67,17 @@ bytes4 data = this.functionName.selector;
 
 #### 三种方式如下：
 ```
+// 使用[函数签名]和[参数编码数据]，调用目标函数
 bytes memory data = abi.encodeWithSignature("doSomething(uint256,bool)",123,true);
 (bool success1, bytes memory data1) = address(targetContract).call(data);
 ```
 ```
+// 使用[函数选择器]和[参数编码数据]，调用目标函数
 bytes4 memory data = this.functionName.selector;
 (bool success1, bytes memory data1) = address(targetContract).call(abi.encodeWithSelector(data, 123, true));
 ```
 ```
+// 使用[函数选择器]和[参数编码数据]，调用目标函数
 bytes4 memory data = bytes4(keccak256("doSomething(uint256,bool)"))
 (bool success1, bytes memory data1) = address(targetContract).call(abi.encodeWithSelector(data, 123, true));
 ```
