--- a/courses/019 ERC20代币.md
+++ b/courses/019 ERC20代币.md
@@ -58,7 +58,7 @@
 ---------------------------------------------------------------------------------------------
 
 ##### 手写练习源码：
-- contract/TestERC20.sol
+- ```contract/TestERC20.sol```
 
 ##### 有改进补充的源码：
-- contract/TestERC20_Addition.sol
+- ```contract/TestERC20_Addition.sol```
