--- a/courses/029 私钥、公钥、地址.md
+++ b/courses/029 私钥、公钥、地址.md
@@ -20,7 +20,7 @@
 
 #### 私钥 -> 公钥：
 ```
-const privateKey = "你的私钥"; // 替换为你的私钥
+const privateKey = "你的私钥"; 
 const wallet = new ethers.Wallet(privateKey); // 内置椭圆曲线加密算法
 const publicKey = wallet.publicKey;
 ```
@@ -29,6 +29,21 @@ const publicKey = wallet.publicKey;
 
 #### 公钥 -> 地址：
 ```
-const publicKey = "你的公钥"; // 替换为你的公钥
+const publicKey = "你的公钥"; 
 const address = ethers.utils.computeAddress(publicKey); // 内置哈希复杂处理
 ```
+
+　
+
+#### 私钥 -> 地址：
+```
+const privateKey = "你的私钥"; 
+const wallet = new ethers.Wallet(privateKey); // 内置椭圆曲线加密算法
+const address = wallet.address;
+```
+```
+const privateKey = "你的私钥"; 
+const address = web3.eth.accounts.privateKeyToAccount(privateKey).address;
+```
+
+
