--- a/courses/029 私钥、公钥、地址.md
+++ b/courses/029 私钥、公钥、地址.md
@@ -43,7 +43,7 @@ const address = wallet.address;
 ```
 ```
 const privateKey = "你的私钥"; 
-const address = web3.eth.accounts.privateKeyToAccount(privateKey).address;
+const address = web3.eth.accounts.privateKeyToAccount(privateKey).address; // 内置椭圆曲线加密算法
 ```
 
 
