2个完整的签名方式示例

--- a/courses/030 数字签名方式1.md
+++ b/courses/030 数字签名方式1.md
@@ -2,6 +2,7 @@
 
 #### 示例 签名方式1：
 ##### 用户A进行一次投票行为，假设他为一个候选人ID=12345的人，进行投票
+##### 使用自己的私钥结合ethers.Wallet，对这条消息进行签名
 
 - 完整合约如下 TestVoting.sol：
 ```
@@ -61,7 +62,7 @@ main()
     });
 ```
 
-- 部署成功后，使用nodejs模拟用户A的行为，如下，runTestVoting.js
+- 部署成功后，使用nodejs模拟用户A的行为(签名+交互合约)，如下，runTestVoting.js
 ```
 const hre = require("hardhat");
 const logger = require("../srcs/logger");
@@ -150,5 +151,5 @@ PS F:\project_web3\project_contract_development_more_tests\project_web3_pure_dep
 }
 2024-10-11 20:46:09 [info]: 交易发送成功：", [object Object]
 ```
-- 可以看到日志中 VerifyVoteLog的监控，返回true
+- 可以看到日志中 VerifyVoteLog的监控中，账户检查成功，返回true
 
