--- a/courses/030 数字签名方式2.md
+++ b/courses/030 数字签名方式2.md
@@ -80,7 +80,7 @@ main()
     });
 ```
 
-- 部署成功后，使用nodejs计算消息的hash值，如下，runTestVoting_BrowserGetHash.js
+- 部署成功后，使用nodejs计算消息的 hashToEth + Signature，如下，runTestVoting_BrowserGetHash.js
 ```
 const hre = require("hardhat");
 const logger = require("../srcs/logger");
@@ -136,7 +136,7 @@ main()
     VM604:12 Signature: 0x6311711e04fc1d23de2a75b020062f67398c9bcd1728c7c1d01f86755286c3331412e4a7e15c67862b74803527e41d93ea5fcf7d4572b3317347b8c2b8c35efa1b
 ```
 
-- 最后，使用nodejs模拟用户A的行为(使用上两步的hashToEth+Signature，向合约交互)，如下，runTestVoting_BrowserToContract.js
+- 最后，使用nodejs模拟用户A的行为(使用上两步的hashToEth + Signature，向合约交互)，如下，runTestVoting_BrowserToContract.js
 ```
 const hre = require("hardhat");
 const logger = require("../srcs/logger");
