--- a/courses/030 数字签名方式2.md
+++ b/courses/030 数字签名方式2.md
@@ -91,10 +91,11 @@ async function main() {
   const candidateId = "12345"; // 候选人的ID
   const message = `I vote for candidate ${candidateId}`; // 投票的消息
 
-  // 计算哈希值
+  // 计算 hash
   const hash = ethers.utils.keccak256(ethers.utils.toUtf8Bytes(message));
   logger.info(`hash = ${hash}`);
 
+  // 计算 hashToEth
   const prefix = "\x19Ethereum Signed Message:\n32"; // 前缀
   const hashAddPrefix = ethers.utils.concat([ethers.utils.toUtf8Bytes(prefix), hash]); // 拼接前缀和哈希
   const hashToEth = ethers.utils.keccak256(hashAddPrefix); // 计算哈希
