--- a/courses/030 数字签名方式2.md
+++ b/courses/030 数字签名方式2.md
@@ -136,6 +136,8 @@ main()
     VM604:11 Account: 0x352307e6d885976d25b780f2af1f519084f6b2e7
     VM604:12 Signature: 0x6311711e04fc1d23de2a75b020062f67398c9bcd1728c7c1d01f86755286c3331412e4a7e15c67862b74803527e41d93ea5fcf7d4572b3317347b8c2b8c35efa1b
 ```
+![signature_1.](../images/signature_1.png "signature_1.")
+![signature_2.](../images/signature_2.png "signature_2.")
 
 - 最后，使用nodejs模拟用户A的行为(使用上两步的hashToEth + Signature，向合约交互)，如下，runTestVoting_BrowserToContract.js
 ```
