--- a/courses/031 多签钱包.md
+++ b/courses/031 多签钱包.md
@@ -306,17 +306,17 @@ main()
 
 - 编写复杂的与钱包交互的指令
 - nodejs代码如下，runTestMultisigWallet.js
-- 使用 "行为枚举 Operate"，来逐一交互
-> 使用 ```const opr = Operate.getBalance;``` 来查询多签钱包的余额
-> 使用 ```const opr = Operate.encodeTransactionData;``` 提前测试"本地"与"合约"，各自生成"目标交易"哈希值，对比
-> 使用 ```const opr = Operate.testTransEthToTarget;``` 测试使用多签钱包，暴力转账到指定地址
-> 使用 ```const opr = Operate.initializeEthToWallet;``` 让所有创始者，初始多签钱包的资金
-> 使用 ```const opr = Operate.createTransactionAndEncodeHash;``` 正式生成"目标交易"哈希(这里以第六位账户Frank，成为目标交易的地址)
-> 使用 ```const opr = Operate.signTransaction;``` 让前三位的创始者，逐个对"目标交易"进行签名
-> 使用 ```const opr = Operate.collectAndSortSignatures;``` 汇总前三位的创始者，刚刚完成的签名，连接在一起
-> 使用 ```const opr = Operate.submitTransaction;``` 提交"目标交易"到合约
-- 最终查看本地日志，以及各位创始者的余额，以及最终多签钱包的余额，以及Frank的余额
-- 我是详细的调式成功过哈
+- **使用 "行为枚举 Operate"，来逐一交互**
+- **使用 ```const opr = Operate.getBalance;``` 来查询多签钱包的余额**
+- **使用 ```const opr = Operate.encodeTransactionData;``` 提前测试"本地"与"合约"，各自生成"目标交易"哈希值，对比**
+- **使用 ```const opr = Operate.testTransEthToTarget;``` 测试使用多签钱包，暴力转账到指定地址**
+- **使用 ```const opr = Operate.initializeEthToWallet;``` 让所有创始者，初始多签钱包的资金**
+- **使用 ```const opr = Operate.createTransactionAndEncodeHash;``` 正式生成"目标交易"哈希(这里以第六位账户Frank，成为目标交易的地址)**
+- **使用 ```const opr = Operate.signTransaction;``` 让前三位的创始者，逐个对"目标交易"进行签名**
+- **使用 ```const opr = Operate.collectAndSortSignatures;``` 汇总前三位的创始者，刚刚完成的签名，连接在一起**
+- **使用 ```const opr = Operate.submitTransaction;``` 提交"目标交易"到合约**
+- **最终查看本地日志，以及各位创始者的余额，以及最终多签钱包的余额，以及Frank的余额**
+- **我是详细的调式成功过哈**
 ```
 const hre = require("hardhat");
 const logger = require("../srcs/logger");
