--- a/courses/031 多签钱包.md
+++ b/courses/031 多签钱包.md
@@ -21,7 +21,7 @@
 
 　
 #### 以下展示一个使用示例：
-##### 假设有5位持有人（Alice、Bob、Charlie、Dave 和 Eric），并且设置为 4 签 3（至少需要 3 人签名才能执行交易），以下是完整展示。
+##### 假设有5位创始者（Alice、Bob、Charlie、Dave 和 Eric），并且设置为 4 签 3（至少需要 3 人签名才能执行交易），以下是完整展示。
 
 　
 
