--- a/courses/005 修饰器.md
+++ b/courses/005 修饰器.md
@@ -1,4 +1,6 @@
 #### 修饰器（modifier）：
+- 修饰器的使用允许你在函数执行前后添加额外的逻辑，比如权限检查、状态修改等。
+- 一个函数可以同时使用多个修饰器。
 
 ##### 定义
 ```
@@ -6,11 +8,20 @@ modifier onlyOwner {
    require(msg.sender == owner); // 检查调用者是否为owner地址
    _; // 如果是的话，继续运行函数主体；
 }
+
+modifier notZeroAddress(address _address) {
+   require(_address != address(0), "Address is zero");
+   _;
+}
 ```
 
 ##### 使用
 ```
 function changeOwner(address _newOwner) external onlyOwner{
    owner = _newOwner; // 只有owner地址运行这个函数，并改变owner
+}
+
+function doSomething(address _address) external onlyOwner notZeroAddress(_address) {
+    // 你的逻辑
 }
 ```
